# AGV-PK

./: .gitignore  AGV Presentation.ai  README.md
Beacon/: Beacon.ino
Bill of materials/: BOM-001-18.01.2023.xlsx
Docs/: AGV Details Presentation .ai  AGV Operating Manual.docx  AGV Project.xlsx  AGV Technology Document.docx  Document Materials.rar  Technical-Manual - Vietnamese.docx  User-Manual - Vietnamese.docx
ESP32-Firmware/Beacon_Scanner/: Beacon_Scanner.ino
ESP32-Firmware/CameraWebServer/: CameraWebServer.ino
ESP32-Firmware/Motor_Controller/: Motor_Controller.ino
Raspberry/Computer Vision/: install_requirements.py  main.py  pyproject.toml  requirements.txt
Raspberry/Console/: Console.sln
Raspberry/Console/Console/: API.cs  Audio.cs  Board.cs  ComputerVision.cs  Console.csproj  Database.cs  GuidanceSystem.cs  IPC.cs  JsonClass.cs  Localizer.cs  MQTTClient.cs  Mapper.cs  Module.cs  Navigator.cs  PowerSupply.cs  Program.cs  Scheduler.cs  Sensors.cs  SocketClient.cs
Raspberry/Console/Console/Properties/: launchSettings.json
Server/API-Gateway/: API-Gateway.sln
Server/API-Gateway/API-Gateway/: API-Gateway.csproj  Dockerfile
Server/API-Gateway/API-Gateway/Properties/: launchSettings.json
Server/Dashboard/: Dashboard.sln
Server/Dashboard/Dashboard/: Dashboard.csproj  Dockerfile
Server/Dashboard/Dashboard/Controllers/: HomeController.cs
Server/Dashboard/Dashboard/Properties/: launchSettings.json
Software Design/: API.drawio  General.drawio  MQTT-Topics.drawio
WorkFlows/: AGV.drawio  General.drawio
(+4 files in other folders)
