[tool.poetry]
name = "computer vision"
version = "0.1.0"
description = ""
authors = ["Nguyen Thanh Duy Tan <duytan.nguyenthanh98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
imutils = "0.5.4"
opencv-contrib-python = "4.7.0.72"
paho-mqtt = "1.6.1"
pillow = "9.5.0"
pybase64 = "1.2.3"
pyzmq = "25.1.0"
numpy = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
